--- a/Assignment 3/Style.css
+++ b/Assignment 3/Style.css
@@ -5,4 +5,10 @@
     box-sizing: border-box;
     background-color: darkgray;
   }
-  
+
+
+nav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
