background image updated

--- a/Assignment 1+2/style.css
+++ b/Assignment 1+2/style.css
@@ -6,11 +6,16 @@
 
   }
 
-body {
-    background-image: url("https://multimatic.wpengine.com/wp-content/uploads/2022/12/Ford_GTMkIV_02_1920x1080.jpg?w=1920&q=75");
-    background-color: darkgray;
 
+body {
+    background-image: url('https://multimatic.wpengine.com/wp-content/uploads/2022/12/Ford_GTMkIV_02_1920x1080.jpg?w=1920&q=75');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
 }
+ 
+
+
 
 nav {
     list-style-type: none;
