--- a/Assignment 3/Style.css
+++ b/Assignment 3/Style.css
@@ -8,7 +8,21 @@
 
 
 nav {
+    display: flex;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+
+}
+
+a:link {
+  margin: 5px;
+  padding: 15px;
+  border: 2px;
+  border-color: black;
+  text-decoration: none;
+  color: black;
+  list-style-type: none;
+  text-align: center;
 }
