--- a/Assignment 1+2/style.css
+++ b/Assignment 1+2/style.css
@@ -3,76 +3,120 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
 
   }
 
 
 body {
     width: 100%;
-    background-image: url('https://multimatic.wpengine.com/wp-content/uploads/2022/12/Ford_GTMkIV_02_1920x1080.jpg?w=1920&q=75');
+    background-color: white;
     background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
 
+
 }
-
-.container {
-    width: 100%;
-}
-
-
-
-.navbar {
-    width: 95%;
-    padding: 20px;
-    margin: auto;
-    min-height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-
-.nav-menu{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 60px;
-}
-
-header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-li {
-    list-style: none;
-}
-
-a {
-    color: white;
-    text-decoration: none;
-}
- 
-
-
 
 nav {
+    position: absolute;
+    top: 0;
+    padding: 10px;
+}
+
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-}   
-
-.navbar {
-    float: center;
+    overflow: hidden;
 }
 
 
 
-.nav {
+.right {
+    float: right;
+    display: flex;
+    width: 16%;
+    bottom: 4px;
+}
+
+nav li a {
     display: block;
-    padding: 8px;
-    background-color: #dddddd;
+    color: whitesmoke;
+    text-align: left;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: large;
+}
+
+nav img {
+    float: left;
+    background-color: transparent;
+    width: 15%;
+}
+
+nav .right a:hover {
+    background-color: darkgrey;
+    opacity: 90%;
+
+}
+
+
+.frontPageText h1 {
+    position: fixed;
+    right: 60%;
+    top: 180px;
+    color: whitesmoke;
+    text-shadow: 4px 4px #181818;
+
+}
+
+header {
+    height: 200vh;
+
+  }
+  
+.container {
+    clip: rect(0, auto, auto, 0);
+    overflow: hidden;
+    position: absolute;
+    height: 100vh;
+    left: 0;
+    width: 100%;
+
+  
+}
+   
+.title_wrapper {
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    top: 0px;
+}
+  
+.container_image {
+    background-image: url(https://multimatic.wpengine.com/wp-content/uploads/2022/12/Ford_GTMkIV_02_1920x1080.jpg?w=1920&q=75Q);
+    background-size:100vw auto;
+    background-position: center;
+    background-attachment: fixed;
+    
+}
+  
+  
+section {
+    text-align: center;
+    min-height: 100vh;
+    padding: 2em;
+    margin: auto;
+    max-width: 800px;
+
+    
+}
+  
+section h2 {
+    font-family: 'Fraunces', serif;
+}
+  
+section p {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
