fixed issue with nav bar (not clickable)

--- a/Assignment 1+2/style.css
+++ b/Assignment 1+2/style.css
@@ -79,7 +79,7 @@ header {
 .container {
     clip: rect(0, auto, auto, 0);
     overflow: hidden;
-    position: absolute;
+    position: relative;
     height: 100vh;
     left: 0;
     width: 100%;
