--- a/Assignment 1+2/style.css
+++ b/Assignment 1+2/style.css
@@ -9,6 +9,7 @@
 
 
 body {
+
     width: 100%;
     background-color: white;
     background-position: top;
@@ -19,7 +20,6 @@ body {
 }
 
 nav {
-    position: absolute;
     top: 0;
     padding: 10px;
 }
@@ -41,7 +41,6 @@ nav ul {
 }
 
 nav li a {
-    display: block;
     color: whitesmoke;
     text-align: left;
     padding: 10px 20px;
@@ -65,9 +64,10 @@ nav .right a:hover {
 .frontPageText h1 {
     position: fixed;
     right: 60%;
-    top: 180px;
+    top: 200px;
     color: whitesmoke;
-    text-shadow: 4px 4px #181818;
+    text-shadow: 5px 3px #181818;
+    margin: auto;
 
 }
 
@@ -77,9 +77,6 @@ header {
   }
   
 .container {
-    clip: rect(0, auto, auto, 0);
-    overflow: hidden;
-    position: relative;
     height: 100vh;
     left: 0;
     width: 100%;
@@ -88,7 +85,6 @@ header {
 }
    
 .title_wrapper {
-    overflow: hidden;
     position: fixed;
     width: 100%;
     top: 0px;
@@ -104,17 +100,13 @@ header {
   
   
 section {
-    text-align: center;
-    min-height: 100vh;
-    padding: 2em;
     margin: auto;
     max-width: 800px;
-
-    
 }
   
 section h2 {
     font-family: 'Fraunces', serif;
+    padding-bottom: 10px;
 }
   
 section p {
