--- a/Assignment 3/style.css
+++ b/Assignment 3/style.css
@@ -37,13 +37,11 @@
   height: 100vh;
   width: 100%;
   justify-content: space-between;
-  margin-bottom: 20px;
   display: flex;
 }
 
 .left {
   width: 40%;
-  
 }
 
 img {
@@ -60,7 +58,7 @@ h1 {
 }
 
 h3 {
-  color:rgb(175, 169, 169);
+  color: rgb(175, 169, 169);
   font-size: 35px;
 }
 
@@ -80,6 +78,5 @@ iframe {
   border-radius: 8px;
   position: sticky;
   aspect-ratio: 16/9;
-  width:50%
-  
+  width: 50%;
 }
